--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,8 @@
 ﻿@charset "utf-8";
 /* CSS Document */
 html,body{
-	height:100%;width:100%;
-	font: normal 100%;
+	height:100%;
+	width:100%;
 }
 h3,input,li,body,select,a{
 	font-family:'\5FAE\8F6F\96C5\9ED1';color:#006DA8;
